--- a/ADMIN/admin.css
+++ b/ADMIN/admin.css
@@ -84,11 +84,13 @@ main {
 
 section {
     width: 100%;
+    display: flex;
+    justify-content: space-evenly;
 }
 
 .container {
     width: 400px;
-    margin: 0 auto;
+    /* margin: 0 auto; */
     border: 1px solid #ccc;
     padding: 20px;
     border-radius: 10px;
@@ -105,6 +107,7 @@ section {
 
 .form-group {
     margin-bottom: 15px;
+    
 }
 
 label {
@@ -122,7 +125,12 @@ input[type="number"] {
     border-radius: 5px;
 }
 
-input[type="submit"] {
+.buttons {
+    display: flex;
+    justify-content: space-between;
+}
+
+.submit {
     background-color: #4caf50;
     color: white;
     border: none;
@@ -132,15 +140,74 @@ input[type="submit"] {
     font-size: 18px;
 }
 
-input[type="submit"]:hover {
-    background-color: #45a049;
+.edit {
+    background-color: #ec8b0d;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 18px;
 }
 
+.cancel {
+    background-color: #ff0404;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 18px;
+}
+
+section .card {
+    width: 65%;
+    
+}
+
+#product-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+}
+
+#product-table th, #product-table td {
+    border: 1px solid #ddd;
+    padding: 12px;
+    text-align: left;
+}
+
+#product-table th {
+    background-color: #f2f2f2;
+}
+
+#product-table tr:hover {
+    background-color: #f5f5f5;
+}
+
+.edit-icon, .cancel-icon {
+    cursor: pointer;
+    color: #007bff;
+    margin-right: 10px;
+    font-size: 20px;
+}
+
+.edit-icon:hover, .cancel-icon:hover {
+    color: #0056b3;
+}
+
+
+.product-card {
+display: flex;
+justify-content: space-around;
+align-items: center;
+flex-wrap: wrap;
+}
 /* Footer */   
 footer {
     background-color: #333;
     color: white;
-    padding: 20px 0;
+    padding: 30px 10px;
     text-align: center;
     width: 100%;
     position: relative;
