--- a/USERS/users.css
+++ b/USERS/users.css
@@ -122,7 +122,36 @@ header nav {
     text-align: center;
 }
 
+.details-item {
+    width: 50px;
+    height: 30px;
+    
+}
 
+.details-item a {
+    text-decoration: none;
+    color: black;
+    font-weight: 400;
+}
+
+.loader {
+    border: 6px solid rgba(0, 0, 0, 0.3);
+    border-radius: 50%;
+    border-top: 6px solid #3498db;
+    width: 50px;
+    height: 50px;
+    animation: spin 2s linear infinite;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: none;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
 
 /* Footer */   
 footer {
@@ -131,7 +160,7 @@ footer {
     padding: 20px 0;
     text-align: center;
     width: 100%;
-    position: relative;
+    position: absolute;
     bottom: 0;
 }
 
